--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -57,7 +57,7 @@
     "apollo-client": "^2.3.1",
     "apollo-engine": "^1.1.0",
     "apollo-link": "^1.0.6",
-    "apollo-link-batch-http": "1.2.2",
+    "apollo-link-batch-http": "^1.2.2",
     "apollo-link-http": "^1.5.4",
     "apollo-link-schema": "^1.0.2",
     "apollo-link-state": "^0.4.1",
