--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -47,6 +47,7 @@
     "apollo-link": "^1.0.6",
     "apollo-link-batch-http": "1.2.2",
     "apollo-link-context": "^1.0.7",
+    "apollo-link-http": "^1.5.4",
     "apollo-link-state": "^0.4.1",
     "apollo-link-ws": "^1.0.3",
     "apollo-logger": "^0.3.0",
