--- a/packages/server/.env
+++ b/packages/server/.env
@@ -13,6 +13,8 @@ FACEBOOK_CLIENTID=
 FACEBOOK_CLIENTSECRET=
 GOOGLE_CLIENTID=
 GOOGLE_CLIENTSECRET=
+GITHUB_CLIENTID=405b0b4e8299aa38f8a9
+GITHUB_CLIENTSECRET=48d93501dcddd6e5f5c61a083c8ec267d557598f
 
 # Email
 EMAIL_HOST=smtp.ethereal.email
