--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -55,6 +55,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
     "error-stack-parser": "^2.0.1",
+    "express-http-proxy": "^1.2.0",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
     "formik": "^0.11.10",
