--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -74,6 +74,7 @@
     "dotenv": "^5.0.1",
     "error-stack-parser": "^2.0.1",
     "express": "^4.16.2",
+    "express-http-proxy": "^1.2.0",
     "filesize": "^3.5.11",
     "graphql": "0.13.0",
     "graphql-auth": "0.2.2",
