--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -52,11 +52,13 @@
   "author": "SysGears INC",
   "license": "MIT",
   "dependencies": {
+    "@types/node-fetch": "^2.1.2",
     "apollo-cache-inmemory": "^1.1.12",
     "apollo-cache-router": "^1.1.6",
     "apollo-client": "^2.3.1",
     "apollo-link": "^1.0.6",
     "apollo-link-batch-http": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "apollo-link-schema": "^1.0.2",
     "apollo-link-state": "^0.4.1",
