--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -67,6 +67,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.3.1",
     "dotenv": "^5.0.1",
     "error-stack-parser": "^2.0.1",
     "express": "^4.16.2",
@@ -91,6 +92,7 @@
     "mysql2": "^1.5.1",
     "node-fetch": "^2.1.2",
     "nodemailer": "^4.4.1",
+    "parse-headers": "^2.0.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
@@ -112,6 +114,7 @@
     "react-stripe-elements": "^1.2.1",
     "redux": "^4.0.0",
     "serialize-javascript": "^1.4.0",
+    "set-cookie-parser": "^2.2.1",
     "shelljs": "^0.8.1",
     "shortid": "^2.2.8",
     "source-map-support": "^0.5.0",
