--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,6 +56,7 @@
     "apollo-upload-client": "^8.0.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "brace": "^0.11.1",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
@@ -72,6 +73,7 @@
     "minilog": "^3.1.0",
     "prop-types": "^15.6.0",
     "react": "16.3.1",
+    "react-ace": "^6.1.4",
     "react-apollo": "^2.1.4",
     "react-art": "^16.3.2",
     "react-cookie": "^2.2.0",
