--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -57,6 +57,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
     "brace": "^0.11.1",
+    "draft-js": "^0.10.5",
     "error-stack-parser": "^2.0.1",
     "extract-files": "^3.1.0",
     "filesize": "^3.5.11",
