--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -85,6 +85,7 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.1.2",
     "react-i18next": "^7.6.0",
+    "react-quill": "^1.3.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
